--- a/index.html
+++ b/index.html
@@ -1,48 +1,20 @@
-<style>
-  .specific-text-code-embed {
-    margin-right: 10px;
-    line-height: 1.5;
-  }
-
-  .specific-link-code-embed {
-    box-sizing: border-box;
-    padding: 2px 10px;
-    background-color: #ff8a00;
-    text-decoration: none;
-    color: aqua;
-    font-family: inherit;
-    font-weight: 500;
-    border-radius: 7px;
-    line-height: 1.5;
-  }
-
-  .specific-link-code-embed:hover {
-    background-color: #d27204;
-  }
-
-  .specific-link-code-embed:not(:last-child) {
-    margin-right: 10px;
-  }
-</style>
+<link
+  rel="stylesheet"
+  href="https://codefinity-content-media-v2.s3.eu-west-1.amazonaws.com/courses/c1087363-9025-4c37-8d5e-983a32a007e9/links-section/link-to-git-codesandbox-link.css"
+/>
 
 <span class="specific-text-code-embed"
   >Here is the code from the recording:
 </span>
-
-<!-- Change the value for the href attribute into the CodeSandbox link -->
 <a
   href="https://codesandbox.io/s/reactp-intro-context-yn7227?file=/src/App/App.jsx"
   target="_blank"
   class="specific-link-code-embed"
+  >CodeSandbox</a
 >
-  CodeSandbox
-</a>
-
-<!-- Change the value for the href attribute into the github link -->
 <a
   href="https://github.com/olreyplay/navigation"
   target="_blank"
   class="specific-link-code-embed"
+  >GitHub</a
 >
-  GitHub
-</a>
